--- a/app/src/main/res/layout/activity_buat_biodata.xml
+++ b/app/src/main/res/layout/activity_buat_biodata.xml
@@ -1,13 +1,13 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="10dp"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:paddingTop="10dp"
-    tools:context="com.dnr.none.User.BuatBiodata" >
-
+    android:paddingBottom="12dp"
+    android:paddingLeft="12dp"
+    android:paddingRight="12dp"
+    android:paddingTop="12dp"
+    tools:context=".BuatBiodata" >
     <EditText
         android:id="@+id/editText1"
         android:layout_width="match_parent"
@@ -16,10 +16,8 @@
         android:layout_below="@+id/textView1"
         android:inputType="number"
         android:maxLength="10">
-
         <requestFocus />
     </EditText>
-
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
@@ -27,7 +25,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:text="Nomor" />
-
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
@@ -36,7 +33,6 @@
         android:layout_below="@+id/editText1"
         android:layout_marginTop="10dp"
         android:text="Nama" />
-
     <EditText
         android:id="@+id/editText2"
         android:layout_width="match_parent"
@@ -45,7 +41,6 @@
         android:layout_below="@+id/textView2"
         android:inputType="text"
         android:maxLength="20"/>
-
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
@@ -54,7 +49,6 @@
         android:layout_below="@+id/editText2"
         android:layout_marginTop="10dp"
         android:text="Tanggal Lahir" />
-
     <EditText
         android:id="@+id/editText3"
         android:layout_width="match_parent"
@@ -62,7 +56,6 @@
         android:layout_alignLeft="@+id/textView3"
         android:layout_below="@+id/textView3"
         android:inputType="date"/>
-
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
@@ -71,7 +64,6 @@
         android:layout_below="@+id/editText3"
         android:layout_marginTop="10dp"
         android:text="Tim" />
-
     <EditText
         android:id="@+id/editText4"
         android:layout_width="match_parent"
@@ -79,7 +71,6 @@
         android:layout_alignLeft="@+id/textView4"
         android:layout_below="@+id/textView4"
         android:inputType="text"/>
-
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
@@ -87,8 +78,7 @@
         android:layout_alignLeft="@+id/editText4"
         android:layout_below="@+id/editText4"
         android:layout_marginTop="10dp"
-        android:text="Alamat" />
-
+        android:text="Longitude" />
     <EditText
         android:id="@+id/editText5"
         android:layout_width="match_parent"
@@ -97,7 +87,22 @@
         android:layout_below="@+id/textView5"
         android:maxLength="100"
         android:inputType="text"/>
-
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editText5"
+        android:layout_below="@+id/editText5"
+        android:layout_marginTop="10dp"
+        android:text="Latitude" />
+    <EditText
+        android:id="@+id/editText6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView6"
+        android:layout_below="@+id/textView6"
+        android:maxLength="100"
+        android:inputType="text"/>
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
@@ -106,7 +111,6 @@
         android:layout_alignParentBottom="true"
         style="?android:attr/borderlessButtonStyle"
         android:text="Simpan" />
-
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
@@ -116,5 +120,4 @@
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/editText5"
         android:layout_alignEnd="@+id/editText5" />
-
 </RelativeLayout>
