--- a/app/src/main/res/layout/activity_buat_biodata.xml
+++ b/app/src/main/res/layout/activity_buat_biodata.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="Nomor" />
+        android:text="Nomor Pertandingan" />
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
@@ -32,7 +32,7 @@
         android:layout_alignLeft="@+id/editText1"
         android:layout_below="@+id/editText1"
         android:layout_marginTop="10dp"
-        android:text="Nama" />
+        android:text="Nama Tim VS Nama Tim" />
     <EditText
         android:id="@+id/editText2"
         android:layout_width="match_parent"
@@ -48,7 +48,7 @@
         android:layout_alignLeft="@+id/editText2"
         android:layout_below="@+id/editText2"
         android:layout_marginTop="10dp"
-        android:text="Tanggal Lahir" />
+        android:text="Tanggal Pertandingan" />
     <EditText
         android:id="@+id/editText3"
         android:layout_width="match_parent"
@@ -63,7 +63,7 @@
         android:layout_alignLeft="@+id/editText3"
         android:layout_below="@+id/editText3"
         android:layout_marginTop="10dp"
-        android:text="Tim" />
+        android:text="Tempat Bertanding" />
     <EditText
         android:id="@+id/editText4"
         android:layout_width="match_parent"
