--- a/app/src/main/res/layout/activity_lihat_biodata.xml
+++ b/app/src/main/res/layout/activity_lihat_biodata.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_marginRight="104dp"
+        android:layout_marginRight="115dp"
         android:layout_marginTop="20dp"
         android:text="TextView" />
 
@@ -23,6 +23,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/textView1"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="115dp"
         android:layout_below="@+id/textView1"
         android:layout_marginTop="20dp"
         android:text="TextView" />
@@ -33,6 +35,8 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView2"
         android:layout_below="@+id/textView2"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="115dp"
         android:layout_marginTop="20dp"
         android:text="TextView" />
 
@@ -42,8 +46,11 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView3"
         android:layout_below="@+id/textView3"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="115dp"
         android:layout_marginTop="20dp"
         android:text="TextView" />
+
 
     <TextView
         android:id="@+id/textView5"
@@ -51,6 +58,8 @@
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/textView4"
         android:layout_below="@+id/textView4"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="115dp"
         android:layout_marginTop="20dp"
         android:text="TextView" />
 
@@ -61,7 +70,29 @@
         android:layout_alignBaseline="@+id/textView5"
         android:layout_alignBottom="@+id/textView5"
         android:layout_alignLeft="@+id/TextView03"
-        android:text="Alamat" />
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="115dp"
+        android:text="Longitut" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/textView5"
+        android:layout_below="@+id/textView5"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="115dp"
+        android:layout_marginTop="20dp"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/TextView06"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textView6"
+        android:layout_alignBottom="@+id/textView6"
+        android:layout_alignLeft="@+id/TextView03"
+        android:text="Latitut" />
 
     <TextView
         android:id="@+id/TextView03"
@@ -70,7 +101,7 @@
         android:layout_alignBaseline="@+id/textView4"
         android:layout_alignBottom="@+id/textView4"
         android:layout_alignLeft="@+id/TextView04"
-        android:text="Tim" />
+        android:text="Tempat Bertanding" />
 
     <TextView
         android:id="@+id/TextView04"
@@ -79,7 +110,7 @@
         android:layout_alignBaseline="@+id/textView3"
         android:layout_alignBottom="@+id/textView3"
         android:layout_alignLeft="@+id/TextView02"
-        android:text="Tanggal Lahir" />
+        android:text="Tanggal Bertanding" />
 
     <TextView
         android:id="@+id/TextView02"
@@ -88,7 +119,7 @@
         android:layout_alignBaseline="@+id/textView2"
         android:layout_alignBottom="@+id/textView2"
         android:layout_alignLeft="@+id/TextView01"
-        android:text="Nama" />
+        android:text="Nama Tim VS Nama Tim" />
 
     <TextView
         android:id="@+id/TextView01"
@@ -96,7 +127,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/textView2"
         android:layout_alignParentLeft="true"
-        android:text="Nomor" />
+        android:text="Nomor Pertandingan" />
 
 
 
@@ -104,10 +135,19 @@
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/TextView05"
-        android:layout_below="@+id/TextView05"
+        android:layout_alignLeft="@+id/TextView06"
+        android:layout_below="@+id/TextView06"
         android:layout_marginTop="34dp"
         android:text="Kembali"
         style="?android:attr/borderlessButtonStyle"/>
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Maps"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/button1"
+        android:layout_alignEnd="@+id/textView6" />
 
 </RelativeLayout>
