--- a/app/src/main/res/layout/activity_update_biodata.xml
+++ b/app/src/main/res/layout/activity_update_biodata.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="Nomor" />
+        android:text="Nomor Pertandingan" />
 
     <TextView
         android:id="@+id/textView2"
@@ -35,7 +35,7 @@
         android:layout_alignLeft="@+id/editText1"
         android:layout_below="@+id/editText1"
         android:layout_marginTop="10dp"
-        android:text="Nama" />
+        android:text="Nama Tim Vs Nama Tim" />
 
     <EditText
         android:id="@+id/editText2"
@@ -53,7 +53,7 @@
         android:layout_alignLeft="@+id/editText2"
         android:layout_below="@+id/editText2"
         android:layout_marginTop="10dp"
-        android:text="Tanggal Lahir" />
+        android:text="Tanggal Bertanding" />
 
     <EditText
         android:id="@+id/editText3"
@@ -70,7 +70,7 @@
         android:layout_alignLeft="@+id/editText3"
         android:layout_below="@+id/editText3"
         android:layout_marginTop="10dp"
-        android:text="Tim" />
+        android:text="Tempat Bertanding" />
 
     <EditText
         android:id="@+id/editText4"
@@ -87,7 +87,7 @@
         android:layout_alignLeft="@+id/editText4"
         android:layout_below="@+id/editText4"
         android:layout_marginTop="10dp"
-        android:text="Alamat"
+        android:text="Longitude"
         android:inputType="text"
         android:maxLength="100"/>
 
@@ -98,11 +98,29 @@
         android:layout_alignLeft="@+id/textView5"
         android:layout_below="@+id/textView5" />
 
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editText5"
+        android:layout_below="@+id/editText5"
+        android:layout_marginTop="10dp"
+        android:text="Latitude"
+        android:inputType="text"
+        android:maxLength="100"/>
+
+    <EditText
+        android:id="@+id/editText6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView6"
+        android:layout_below="@+id/textView6" />
+
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText5"
+        android:layout_alignLeft="@+id/editText6"
         android:layout_alignParentBottom="true"
         style="?android:attr/borderlessButtonStyle"
         android:text="Update" />
@@ -114,8 +132,8 @@
         android:text="Kembali"
         style="?android:attr/borderlessButtonStyle"
         android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/editText5"
-        android:layout_alignEnd="@+id/editText5"
+        android:layout_alignRight="@+id/editText6"
+        android:layout_alignEnd="@+id/editText6"
         />
 
 </RelativeLayout>
